Further fixes to the state graph visualizations: make nodes wide enough to contain their text, and fix an overlap issue between the maximize button and the graph nodes.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -630,8 +630,8 @@ textarea {
   border: 1px solid black;
 }
 
-.oppia-map-expansion-button {
-  font-size: large; 
+.oppia-graph-maximize-button {
+  font-size: large;
   z-index: 300;
   margin-right: 2px;
   margin-top: 2px;
